fixed email error, shrank images, added email alert
fixed email error that cropped up after deploy, added an alert to the contact page that displays after the email is sent. also all pictures for better loading times.

--- a/my-portfolio/src/styles/landing.css
+++ b/my-portfolio/src/styles/landing.css
@@ -35,14 +35,14 @@
     font-weight: normal;
     font-size: 2.5vw;
     padding-left: 5%;
-    margin: 0%;
+    margin-top: 5vh;
 }
 
 .landingH3{
     font-weight: normal;
     font-size: 1.5vw;
-    padding-left: 5%;
-    margin-top: 3vh;
+    padding-left: 15%;
+    margin-top: 10vh;
 }
 
 .landingContainer{
